syntax = "proto3";

package user;

import "google/api/annotations.proto";

service UserService {
    rpc GetUser(UserRequest) returns (UserResponse) {
        option (google.api.http) = {
            get: "/users/{id}"
        };
    }

    rpc CreateUser(CreateUserRequest) returns (UserResponse) {
        option (google.api.http) = {
            post: "/users"
            body: "user"
        };
    }
}

message UserRequest {
    string id = 1;
}

message CreateUserRequest {
    User user = 1;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message User {
    string name = 1;
    string email = 2;
}
